--- a/recipes/mne-python_1.2/construct.yaml
+++ b/recipes/mne-python_1.2/construct.yaml
@@ -47,7 +47,7 @@ menu_packages:
 channels:
   - conda-forge
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  - conda-forge/label/mne_dev
+  # - conda-forge/label/mne_dev
   # - conda-forge/label/mne-bids_dev
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
@@ -55,13 +55,13 @@ specs:
   # MNE ecosystem
 
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  - mne =1.2dev0=*_20221007
-  - mne-installer-menus =1.2dev0=*_20221007
+  # - mne =1.2dev0=*_20221007
+  # - mne-installer-menus =1.2dev0=*_20221007
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
-  # - mne =1.2.0=*_0
-  # - mne-installer-menus =1.2.0=*_0
+  - mne =1.2.0=*_0
+  - mne-installer-menus =1.2.0=*_0
   - mne-bids =0.11
   - mne-qt-browser =0.4.0
   - mne-connectivity =0.4.0
