--- a/recipes/mne-python_1.2/construct.yaml
+++ b/recipes/mne-python_1.2/construct.yaml
@@ -60,8 +60,8 @@ specs:
   # - mne-bids =0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
-  - mne =1.2.2=*_0
-  - mne-installer-menus =1.2.2=*_0
+  - mne =1.2.3=*_0
+  - mne-installer-menus =1.2.3=*_0
   - mne-bids =0.11.1
   - mne-qt-browser =0.4.0
   - mne-connectivity =0.4.0
@@ -133,6 +133,7 @@ specs:
   - matplotlib
   - seaborn
   - plotly
+  - vtk =9.2.2
   # Temporary
   # for Vscode compatibility: https://github.com/microsoft/vscode-jupyter/issues/8552#issuecomment-1263940999
   - ipywidgets <8
