--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -110,8 +110,9 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2024.2.0
   # sleep staging
-  # - sleepecg =0.5.8  # TODO: not NumPy 2.0 compatible yet because of wfdb
-  # - yasa =0.6.5  # TODO: not NumPy 2.0 compatible yet because of sleepecg
+  - sleepecg =0.5.8
+  - yasa =0.6.5
+  - wfdb =4.2.0
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.10
   - mnelab =0.9.2
@@ -123,7 +124,7 @@ specs:
   - eeglabio =0.0.3
   - mffpy =0.10.0
   - openmeeg =2.5.15
-  # - python-neo =0.13.4  # TODO: Not NumPy 2.0 compatible yet
+  - python-neo =0.14.0
   - nitime =0.11
   - snirf =0.8.0
   # <<< END RELATED SOFTWARE LIST >>>
@@ -136,6 +137,7 @@ specs:
   - pandas =2.2.3
   - polars =1.21.0
   - scipy =1.15.1
+  - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
   - openblas =0.3.28
   - libblas =3.9.0=*openblas
   - jupyter =1.1.1
@@ -147,7 +149,7 @@ specs:
   # spyder =5.5.5
   - darkdetect =0.8.0
   - qdarkstyle =3.2.3
-  - numba =0.60.0
+  - numba =0.61.0
   - cython =3.0.11
   # I/O
   - pyxdf =1.17.0
