--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -57,7 +57,7 @@ channels:
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 specs:
   # Python
-  - python =3.12.7  # allow_outdated
+  - python =3.13.1
   - pip =25.0
   - wheel =0.45.1
   - conda =25.1.0
@@ -90,7 +90,7 @@ specs:
   - mne-kit-gui =1.3.0
   - autoreject =0.4.3
   - antio =0.5.0
-  - wfdb =4.1.2
+  # - wfdb =4.2.0  # TODO: 4.2.0 not on CF yet https://github.com/conda-forge/wfdb-feedstock/pull/29
   - meegkit =0.1.7
   - eeg_positions =2.1.2
   # MRI
@@ -110,9 +110,8 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2024.2.0
   # sleep staging
-  - sleepecg =0.5.8
-  - yasa =0.6.5
-  - wfdb =4.2.0
+  # - sleepecg =0.5.8  # TODO: Not NumPy 2.0 compatible yet
+  # - yasa =0.6.5  # TODO: Needs sleepecg
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.10
   - mnelab =0.9.2
@@ -141,7 +140,7 @@ specs:
   - openblas =0.3.28
   - libblas =3.9.0=*openblas
   - jupyter =1.1.1
-  - jupyterlab =4.3.4
+  - jupyterlab =4.2.7
   - ipykernel =6.29.5
   - spyder-kernels =3.0.2
   # TODO: Needs to not require pyqt
@@ -190,9 +189,9 @@ specs:
   - pytest-timeout =2.3.1
   - pre-commit =4.1.0
   - ruff =0.9.3
-  - uv =0.5.24
+  - uv =0.5.25
   - check-manifest =0.50
-  - codespell =2.4.0
+  - codespell =2.4.1
   - py-spy =0.4.0
   - line_profiler =4.1.3
   - memory_profiler =0.61.0
