--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -57,10 +57,10 @@ channels:
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 specs:
   # Python
-  - python =3.12.7  # allow_outdated
+  - python =3.12.7  # allow_outdated, vtk
   - pip =25.0
   - wheel =0.45.1
-  - conda =24.11.0  # allow_outdated, https://github.com/conda-forge/conda-feedstock/pull/247#issuecomment-2549103813
+  - conda =25.1.0
   - mamba =2.0.5
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
@@ -90,7 +90,7 @@ specs:
   - mne-kit-gui =1.3.0
   - autoreject =0.4.3
   - antio =0.5.0
-  - wfdb =4.1.2
+  # - wfdb =4.2.0  # TODO: 4.2.0 not on CF yet https://github.com/conda-forge/wfdb-feedstock/pull/29
   - meegkit =0.1.7
   - eeg_positions =2.1.2
   # MRI
@@ -110,8 +110,8 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2024.2.0
   # sleep staging
-  # - sleepecg =0.5.8  # TODO: not NumPy 2.0 compatible yet because of wfdb
-  # - yasa =0.6.5  # TODO: not NumPy 2.0 compatible yet because of sleepecg
+  # - sleepecg =0.5.8  # TODO: Not NumPy 2.0 compatible yet
+  # - yasa =0.6.5  # TODO: Needs sleepecg
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.10
   - mnelab =0.9.2
@@ -123,7 +123,7 @@ specs:
   - eeglabio =0.0.3
   - mffpy =0.10.0
   - openmeeg =2.5.15
-  # - python-neo =0.13.4  # TODO: Not NumPy 2.0 compatible yet
+  - python-neo =0.14.0
   - nitime =0.11
   - snirf =0.8.0
   # <<< END RELATED SOFTWARE LIST >>>
@@ -136,10 +136,11 @@ specs:
   - pandas =2.2.3
   - polars =1.21.0
   - scipy =1.15.1
+  - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
   - openblas =0.3.28
   - libblas =3.9.0=*openblas
   - jupyter =1.1.1
-  - jupyterlab =4.3.4
+  - jupyterlab =4.3.5
   - ipykernel =6.29.5
   - spyder-kernels =3.0.2
   # TODO: Needs to not require pyqt
@@ -147,7 +148,7 @@ specs:
   # spyder =5.5.5
   - darkdetect =0.8.0
   - qdarkstyle =3.2.3
-  - numba =0.60.0
+  - numba =0.61.0
   - cython =3.0.11
   # I/O
   - pyxdf =1.17.0
@@ -188,9 +189,9 @@ specs:
   - pytest-timeout =2.3.1
   - pre-commit =4.1.0
   - ruff =0.9.3
-  - uv =0.5.21  # allow_outdated, windows bild problems
+  - uv =0.5.25
   - check-manifest =0.50
-  - codespell =2.4.0
+  - codespell =2.4.1
   - py-spy =0.4.0
   - line_profiler =4.1.3
   - memory_profiler =0.61.0
