--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -60,7 +60,7 @@ specs:
   - python =3.12.7  # allow_outdated, vtk
   - pip =25.0
   - wheel =0.45.1
-  - conda =25.1.0
+  - conda =25.1.1
   - mamba =2.0.5
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
@@ -90,7 +90,7 @@ specs:
   - mne-kit-gui =1.3.0
   - autoreject =0.4.3
   - antio =0.5.0
-  # - wfdb =4.2.0  # TODO: 4.2.0 not on CF yet https://github.com/conda-forge/wfdb-feedstock/pull/29
+  - wfdb =4.2.0
   - meegkit =0.1.7
   - eeg_positions =2.1.2
   # MRI
@@ -101,7 +101,7 @@ specs:
   - pactools =0.3.1
   - tensorpac =0.6.5
   - emd =0.8.0
-  - neurodsp =2.2.0
+  # - neurodsp =2.2.0  # TODO: broken with latest SciPy
   # - bycycle =1.1.0  # TODO: broken with latest SciPy
   - fooof =1.0.0
   # Microstates
@@ -110,8 +110,8 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2024.2.0
   # sleep staging
-  # - sleepecg =0.5.8  # TODO: Not NumPy 2.0 compatible yet
-  # - yasa =0.6.5  # TODO: Needs sleepecg
+  - sleepecg =0.5.9
+  - yasa =0.6.5
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.10
   - mnelab =0.9.2
@@ -120,6 +120,7 @@ specs:
   - pyprep =0.4.3=*_1
   - python-picard =0.8
   - pybv =0.7.6
+  - edfio =0.4.5
   - eeglabio =0.0.3
   - mffpy =0.10.0
   - openmeeg =2.5.15
@@ -170,7 +171,7 @@ specs:
   - ipympl =0.9.6
   - qtpy =2.4.2
   - seaborn =0.13.2
-  - plotly =5.24.1
+  - plotly =6.0.0
   - vtk =9.3.1=qt*
   - ipywidgets =8.1.5
   - pyvista =0.44.2
@@ -181,15 +182,15 @@ specs:
   - termcolor =2.5.0
   - defusedxml =0.7.1
   # Development
-  - gh =2.65.0
+  - gh =2.66.1
   - setuptools_scm =8.1.0
   - pytest =8.3.4
   - pytest-cov =6.0.0
   - pytest-qt =4.4.0
   - pytest-timeout =2.3.1
   - pre-commit =4.1.0
-  - ruff =0.9.3
-  - uv =0.5.25
+  - ruff =0.9.4
+  - uv =0.5.27
   - check-manifest =0.50
   - codespell =2.4.1
   - py-spy =0.4.0
@@ -204,7 +205,7 @@ specs:
   # Doc building
   - numpydoc =1.8.0
   - pydata-sphinx-theme =0.16.1
-  - graphviz =12.0.0
+  - graphviz =12.2.1
   - python-graphviz =0.20.3
   - selenium =4.28.1
   - sphinx =8.1.3
