--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -110,8 +110,8 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2024.2.0
   # sleep staging
-  - sleepecg =0.5.9
-  - yasa =0.6.5
+  # - sleepecg =0.5.9  # TODO: TensorFlow conflicts
+  # - yasa =0.6.5  # TODO: Requires sleepecg
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.10
   - mnelab =0.9.2
