--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -110,8 +110,8 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2024.2.0
   # sleep staging
-  - sleepecg =0.5.9
-  # - yasa =0.6.5  # TODO: Needs stochastic which is errantly pinned to NP<2
+  # - sleepecg =0.5.9  # TODO: Needs TensorFlow which conflicts with a bunch of stuff
+  # - yasa =0.6.5  # TODO: Needs stochastic which is pinned to NP<2 https://github.com/crflynn/stochastic/issues/79
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.10
   - mnelab =0.9.2
@@ -130,7 +130,6 @@ specs:
   # <<< END RELATED SOFTWARE LIST >>>
   # ^^^ this line is special and used by MNE-Python, do not change it!
 
-  - tensorflow =2.17.0  # needed by sleepecg
   - mayavi =4.8.2=pyside6_*
   - traitsui =8.0.0
   - pyface =8.0.0=*_1
