--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -158,6 +158,7 @@ jobs:
         with:
           qt: true
           pyvista: false
+          wm: false
       - run: ./tools/check_installation.sh
 
   test_linux:
