--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -220,6 +220,7 @@ specs:
   - git =2.47.1  # [win]
   - make =4.4.1  # [win]
   - pyobjc-core =11.0  # [osx]
+  - libffi =3.4.2  # [osx and arm64]  # allow_outdated
   - pyobjc-framework-Cocoa =11.0  # [osx]
   - pyobjc-framework-FSEvents =11.0  # [osx]
 condarc:
