--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -57,7 +57,7 @@ channels:
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: COMMENT OUT BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 specs:
   # Python
-  - python =3.12.7  # allow_outdated, vtk
+  - python =3.13.1
   - pip =25.0.1
   - wheel =0.45.1
   - conda =25.1.1
@@ -91,7 +91,7 @@ specs:
   - autoreject =0.4.3
   - antio =0.5.0
   - wfdb =4.2.0
-  - meegkit =0.1.7
+  - meegkit =0.1.9
   - eeg_positions =2.1.2
   # MRI
   - fsleyes =1.13.0
@@ -110,8 +110,9 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2024.2.0
   # sleep staging
-  - sleepecg =0.5.9=*_2
-  - yasa =0.6.5
+  # TODO: No 3.13-compatible release
+  # - sleepecg =0.5.9=*_2
+  # - yasa =0.6.5
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.10
   - mnelab =1.0.0
@@ -167,10 +168,10 @@ specs:
   # https://github.com/conda-forge/matplotlib-feedstock/blob/main/recipe/meta.yaml
   - matplotlib-base =3.10.0
   - tornado =6.4.2
-  - pyside6 =6.7.3=*_1  # allow_outdated, vtk needs rebuild against 6.8.0 https://github.com/conda-forge/vtk-feedstock/pull/357
-  - qt6-main =6.7.3  # allow_outdated
+  - pyside6 =6.8.2
+  - qt6-main =6.8.2
   - ipympl =0.9.6
-  - qtpy =2.4.2
+  - qtpy =2.4.3
   - seaborn =0.13.2
   - plotly =6.0.0
   - vtk =9.3.1=qt*
@@ -206,7 +207,7 @@ specs:
   # Doc building
   - numpydoc =1.8.0
   - pydata-sphinx-theme =0.16.1
-  - graphviz =12.0.0  # allow_outdated, conflicts with PySide6 6.7.3
+  - graphviz =12.2.1
   - python-graphviz =0.20.3
   - selenium =4.28.1
   - sphinx =8.1.3
