--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -140,7 +140,7 @@ specs:
   - polars =1.22.0
   - scipy =1.15.2
   - numpy =2.1.3  # allow_outdated, each new version has to wait for numba
-  - openblas =0.3.29
+  - openblas =0.3.28  # allow_outdated, NumPy etc. need to update
   - libblas =3.9.0=*openblas
   - jupyter =1.1.1
   - jupyterlab =4.3.5
