--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -61,7 +61,7 @@ specs:
   - pip =25.0.1
   - wheel =0.45.1
   - conda =25.1.1
-  # - mamba =2.0.5
+  - mamba =2.0.5
   # MNE ecosystem
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
   # - mne-base =1.4dev0=*_20230503
@@ -110,9 +110,8 @@ specs:
   # OpenNeuro.org data access
   - openneuro-py =2024.2.0
   # sleep staging
-  # TODO: No 3.13-compatible release
-  # - sleepecg =0.5.9=*_2
-  # - yasa =0.6.5
+  - sleepecg =0.5.9=*_2
+  - yasa =0.6.5
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2 =0.2.10
   - mnelab =1.0.0
