--- a/recipes/mne-python/construct.yaml
+++ b/recipes/mne-python/construct.yaml
@@ -94,15 +94,15 @@ specs:
   - meegkit =0.1.9
   - eeg_positions =2.1.2
   # MRI
-  - fsleyes =1.13.0
+  - fsleyes =1.14.1
   - dcm2niix =1.0.20241211
   - dipy =1.10.0
   # Time-frequency analysis
   - pactools =0.3.1
   - tensorpac =0.6.5
   - emd =0.8.0
-  # - neurodsp =2.2.0  # TODO: broken with latest SciPy
-  # - bycycle =1.1.0  # TODO: broken with latest SciPy
+  - neurodsp =2.3.0
+  - bycycle =1.1.0
   - fooof =1.0.0
   # Microstates
   - mne-microstates =0.3.0
@@ -184,18 +184,18 @@ specs:
   - defusedxml =0.7.1
   # Development
   - gh =2.67.0
-  - setuptools_scm =8.1.0
+  - setuptools_scm =8.2.0
   - pytest =8.3.4
   - pytest-cov =6.0.0
   - pytest-qt =4.4.0
   - pytest-timeout =2.3.1
   - pre-commit =4.1.0
-  - ruff =0.9.6
-  - uv =0.6.1
+  - ruff =0.9.7
+  - uv =0.6.2
   - check-manifest =0.50
   - codespell =2.4.1
   - py-spy =0.4.0
-  - line_profiler =4.1.3
+  - line_profiler =4.2.0
   - memory_profiler =0.61.0
   - twine =6.1.0
   - hatchling =1.27.0
@@ -208,8 +208,8 @@ specs:
   - pydata-sphinx-theme =0.16.1
   - graphviz =12.2.1
   - python-graphviz =0.20.3
-  - selenium =4.28.1
-  - sphinx =8.2.0
+  - selenium =4.29.0
+  - sphinx =8.2.1
   - sphinx-design =0.6.1
   - sphinx-gallery =0.19.0
   - sphinxcontrib-bibtex =2.6.3
@@ -220,11 +220,10 @@ specs:
   - git =2.48.1  # [win]
   - make =4.4.1  # [win]
   - pyobjc-core =11.0  # [osx]
+  # https://github.com/conda-forge/libffi-feedstock/issues/52
   - libffi =3.4.2  # [osx and arm64]  # allow_outdated
   - pyobjc-framework-Cocoa =11.0  # [osx]
   - pyobjc-framework-FSEvents =11.0  # [osx]
-  # https://github.com/conda-forge/libiconv-feedstock/issues/48
-  - libiconv =1.17  # [win]  # allow_outdated
 condarc:
   channels:
     - conda-forge
